--- a/src/content/links/email.yml
+++ b/src/content/links/email.yml
@@ -1,3 +1,3 @@
 label: Email
-name: hey@coderdiaz.com
-url: mailto:hey@coderdiaz.com
+name: timofey.zaruns@gmail.com
+url: mailto:timofey.zaruns@gmail.com
